# underway

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  docker-compose.yaml  docker-compose.yml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: rust.yml
.sqlx/: query-00ad52853928464b8ec237629ea365a458f6269a3139f0c0e6f21aec9b7ba944.json  query-015acc0b6340889d791aa6b3a022f0fce00b58c416604ef98df32fa16017ef38.json  query-01c1cda042c31669ab80d316d22c1475c8af47bd0bf80840263500d1c1569e50.json  query-01d13d3c52b1c14fcfc5f4a7756cca7ce35843f6917f15182f83f09d313d3be2.json  query-025dde73df07d2aadf94631d3d4843b20eab6ea790d19ad7625b19246cb53b3e.json  query-0339598605e18b851febb3b82f7fd6ea567963996799f3ad7826fced236cb656.json  query-034814c7ebb1a0354d8ed95a544d579180ddace0cd1d186aa5f45bb3d66032a3.json  query-03c2ac38e6ec2801eed7e5b19076eafcc589f32e2424460b0c345e6c477a1b28.json  query-040f20db39c70255af32875141672da4cc97ae685f948cbd7798dd287b1dabfb.json  query-0447bb64ad71f3e7b33802ce10941b5cd05903097046b5e484cf05bf2b4fa184.json  query-05abadcb1abc6591d8b59bffd7cfe7a40ce6e5d935d34bb377e204acef918ab1.json  query-05b5ba81b04b832a85f5ebc69706cd01bb3ce3d9005d7bd1c2ae678d22e807ce.json  query-067048b83bbb3fad399db86c8a470534bcee5932f8f0a4cdcf815b5aa692f8b5.json  query-073c2f7dd4b077b6bf3ae168c0b037d04deeb5218bc1dacca39e51c3d3cced76.json  query-0a562e9b6b28d108483610d205fddf4a898eb0abd56acdc05ad4d1f2d2a8a4e5.json  query-0a5ee33f783d00d58f170946ec1457300a2840e02bbd70b1f61d7558c82037d6.json  query-0a7e2676c893c2f387a4922f2f5dc2d3fffaa9a8876370b618c7612603f9c220.json  query-0aabd23ddb629e4b6177789c83104fc8bd6b8d0adf488e86da0d7cc8174bb8c5.json  query-0ba3e34a0223cf00d4724fc2502f0565ac0ea1aad6b5bbbf92ea433d0bfe2fa8.json  query-0be8fb6b24f0691d276b3a954cf25f89e9d916e1727965b3b6fcd274fca0b627.json  query-0cec46982ce972f0cd9b6ebdaa9782cf3dcacde303482c612b4489bf024d0db5.json  query-0d302d44aacf1e8ee3233b8c4814e7355fc4b57d98550cd43aec5c424ac4cdca.json  query-0dde266b7ec1a42d4914ab363d409d78c8175157b9fdfef288d981b11f66a3dc.json  query-0dece29c8db5fc229c7e3ac6ef549526161e370c453d459ddc717ac8c263ec05.json  query-10857803e9aa77e028208c91892750d72012b9316d9069cb2397cfba4ec60976.json  query-1162d58b0ccb59dd02be04be0a4c4b564a1a91af27c8ba28efb3924dea94575d.json  query-1174e23b60bd4457c8a8e01f7c94b6f0bda5f2e586e7bb2b6ff3edc7d7d02648.json  query-13d269934e3c35892b9244b3fdf9a8e2c38297b852b1c74b0db4cb637165b993.json  query-1462bbc88a7448eedb0acbfb6d75b17fee33dd5253d5ab243479b451d27a7d87.json  query-153c2f204ae9d484d788517da590bd3d2e271bc12a03f9e61897eac939edbef9.json  query-156ae2b46efef6d010c6e07fd9f1a6a691052430e23c75262dce6b6df25aee50.json  query-167170ec018c32a7c9238ab95490dccb8d22d4591ba8920691213829c0a11622.json  query-173a5bd77ef2284589e0e40fa200f7ab1107b3c50f174619c0437dad3ab6a71c.json  query-18ca745b057ae8ffac0e70c8a97abe3bd663961519a80fe56e4e01c2881c5efa.json  query-192a1c742cd2b5c5effb7fa1c6f3846952ddd674a6de67bc9e7d8956c8cab72f.json  query-1941d0b76c0bd110eef40337b184c27d37ae9140899cdadb2ac543fc079f532a.json  query-1adaf9d6b114df4a6620fba3c1869b5b2dfb5bec966da839fab4d53ff3440e66.json  query-1be5549d9c124a1cde65483e2d218101cb21ba3d1d348b5d636c704ca3904722.json  query-1c02801a0d702fe2ccc288cc1607e5062656a86e8ef8c759ce108c0dc5477220.json  query-1c4fc765912ce08dde3059168c6275cc2d91378e11e0a4072d707409a4f9fc04.json  (+223 more)
examples/activities/: Cargo.toml
examples/activities/src/: main.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/branching/: Cargo.toml
examples/branching/src/: main.rs
examples/graceful_shutdown/: Cargo.toml
examples/graceful_shutdown/src/: main.rs
examples/multitask/: Cargo.toml
examples/multitask/src/: main.rs
examples/rag/: Cargo.toml  system-prompt.llm.txt
examples/rag/src/: main.rs
examples/scheduled/: Cargo.toml
examples/scheduled/src/: main.rs
examples/step/: Cargo.toml
examples/step/src/: main.rs
examples/tracing/: Cargo.toml
examples/tracing/src/: main.rs
migrations/: 20240921151751_0.sql  20241024174106_1.sql  20241105164503_2.sql  20241110164319_3.sql  20241111174958_4.sql  20241126224448_5.sql  20251226215149_6.sql  20251228120000_0.sql  20260125123000_job_effect_log.sql  20260209120000_6.sql  20260209133000_7.sql  20260213140000_8.sql  20260213190000_9.sql  20260303120000_10.sql
src/: activity.rs  activity_worker.rs  job.rs  lib.rs  observability.rs  queue.rs  runtime.rs  scheduler.rs  task.rs  timestamp.rs  worker.rs  workflow.rs
src/job/: step_options.rs
src/task/: retry_policy.rs
src/workflow/: builder.rs  context.rs  registration.rs  step.rs
