[package]
name = "underway"
description = "⏳ PostgreSQL-backed job queue for reliable background task processing"
version = "0.0.4"
edition = "2021"
license = "MIT"
keywords = ["background-jobs", "job-queue", "work-queue", "sqlx", "web"]
categories = ["asynchronous", "database", "web-programming"]
repository = "https://github.com/maxcountryman/underway"
documentation = "https://docs.rs/underway"

[dependencies]
jiff-cron = "0.1.0"
jiff = { version = "0.1.13", features = ["serde"] }
serde = "1.0.210"
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = [
    "full",
] } # TODO: "full" shouldn't be required
tracing = { version = "0.1.40", features = ["log"] }
ulid = { version = "1.1.3", features = ["uuid"] }
uuid = { version = "1.10.0", features = ["v4"] }
num_cpus = "1.16.0"

[dev-dependencies]
futures = "0.3.30"
