[package]
name = "underway"
description = "⏳ Durable step functions via Postgres"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["background-jobs", "job-queue", "work-queue", "sqlx", "web"]
categories = ["asynchronous", "database", "web-programming"]
repository = "https://github.com/maxcountryman/underway"
documentation = "https://docs.rs/underway"

[dependencies]
jiff-cron = "0.1.0"
jiff = { version = "0.1.13", features = ["serde"] }
serde = "1.0.210"
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = [
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
  "json",
] }
thiserror = "2.0.0"
tokio = { version = "1.40.0", features = [
  "full",
] } # TODO: "full" shouldn't be required
tracing = { version = "0.1.40", features = ["log"] }
ulid = { version = "1.1.3", features = ["uuid"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
num_cpus = "1.16.0"
tokio-util = "0.7.12"

[dev-dependencies]
futures = "0.3.30"
tokio = { version = "1.40.0", features = ["test-util"] }
