[package]
name = "underway"
description = "⏳ Durable background workflows on Postgres"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["background-workflows", "workflow-queue", "work-queue", "sqlx", "web"]
categories = ["asynchronous", "database", "web-programming"]
repository = "https://github.com/maxcountryman/underway"
documentation = "https://docs.rs/underway"

[features]
default = []
otel = [
  "dep:opentelemetry",
  "dep:tracing-opentelemetry",
]

[dependencies]
jiff-cron = "0.1.0"
jiff = { version = "0.1.13", features = ["serde"] }
opentelemetry = { version = "0.28.0", optional = true }
serde = "1.0.210"
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = [
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
  "json",
] }
thiserror = "2.0.0"
tokio = { version = "1.40.0", features = [
  "full",
] } # TODO: "full" shouldn't be required
tracing = { version = "0.1.40", features = ["log"] }
tracing-opentelemetry = { version = "0.29.0", optional = true }
ulid = { version = "1.1.3", features = ["uuid"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
num_cpus = "1.16.0"
tokio-util = "0.7.12"
rand = "0.9.2"

[dev-dependencies]
futures = "0.3.30"
opentelemetry_sdk = "0.28.0"
tokio = { version = "1.40.0", features = ["test-util"] }
tracing-subscriber = { version = "0.3.18", features = ["registry"] }
