[package]
name = "example-basic"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.34.0", features = ["full"] }
underway = { path = "../../" }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
