[package]
name = "example-rag"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-openai = "0.25.0"
jiff = "0.1.13"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
underway = { path = "../../" }
